<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.development.moksha.sportarticles.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="false"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbars="none">


            <LinearLayout
                android:id="@+id/scrollLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnFootball"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/football" />

                <Button
                    android:id="@+id/btnHockey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hockey" />

                <Button
                    android:id="@+id/btnTennis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tennis" />

                <Button
                    android:id="@+id/btnBasketball"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/basketball" />

                <Button
                    android:id="@+id/btnVolleyball"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/volleyball" />

                <Button
                    android:id="@+id/btnCybersport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cybersport" />
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>

    <ListView
        android:id="@+id/lvMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"></ListView>

</LinearLayout>
